# python-binding-example

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.py  test.py  textmathsolve.py
inc/: calculations.h
src/: CMakeLists.txt  calculations.cpp
